syntax = "proto3";

package specs.v1;

option go_package = "specs/v1;pb";

message Attribute {
  message KV {
    string key_value_delimiter = 1;
    string pair_delimiter = 2;
  }

  message Choice {
    string name = 1;
    string description = 2;
  }
  message Choices { repeated Choice choices = 1; }

  message Custom {
    message Modifier {
      string name = 1;
      string description = 2;
      Type type = 3;
      string prefix = 4;
      string suffix = 5;
    }
    string name = 1;
    Type type = 2;
    bool has_key = 3;
    repeated Modifier modifiers = 4;
  }

  message Type {
    oneof type {
      bool string = 1;
      string delimited = 2;
      KV kv = 3;
      bool bool = 4;
      bool integer = 5;
      bool number = 6;
      Choices choices = 7;
      bool rune = 8;
      Custom custom = 9;
      bool json = 10;
      bool duration_ms = 11;
    }
  }
  string key = 1;
  string name = 2;
  string description = 3;
  Type type = 4;
}

message Element {
  string tag = 1;
  string name = 2;
  string description = 3;
  bool no_children = 4;
  repeated Attribute attributes = 5;
}

message Namespace {
  string name = 1;
  string description = 2;
  string prefix = 3;
  repeated Element elements = 4;
  repeated Attribute attributes = 5;
}

message Namespaces {
  repeated Namespace namespaces = 1;
  repeated Attribute attributes = 5;
}